PERSONACHANGEREQUESTAPP/force-app/main/default/objects/PersonaChangeRequestEvent__e/PersonaChangeRequestEvent__e.object-meta.xml
<CustomObject>
    <description>Asynchronous changes for persona enablement</description>
    <label>Persona Change Request Event</label>
    <pluralLabel>Persona Change Request Events</pluralLabel>
</CustomObject>