PERSONACHANGEREQUESTAPP/force-app/main/default/objects/PersonaChangeRequestEvent__e/fields/FromApp__c.field-meta.xml
<CustomField>
    <fullName>FromApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FromApp</label>
    <type>Checkbox</type>
</CustomField>