PERSONACHANGEREQUESTAPP/force-app/main/default/objects/PersonaChangeRequestEvent__e/fields/HasRevert__c.field-meta.xml
<CustomField>
    <fullName>HasRevert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasRevert</label>
    <type>Checkbox</type>
</CustomField>