PERSONACHANGEREQUESTAPP/force-app/main/default/objects/PersonaChangeRequestEvent__e/fields/IsRevert__c.field-meta.xml
<CustomField>
    <fullName>IsRevert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRevert</label>
    <type>Checkbox</type>
</CustomField>