PERSONACHANGEREQUESTAPP/force-app/main/default/objects/PersonaChangeRequestEvent__e/fields/MirrorAs__c.field-meta.xml
<CustomField>
    <fullName>MirrorAs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MirrorAs</label>
    <type>Checkbox</type>
</CustomField>