PERSONACHANGEREQUESTAPP/force-app/main/default/objects/PersonaChangeRequestEvent__e/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>